[build-system]
requires = [
	"setuptools>=68",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-master-regmap-generator"
description = "Generate C register maps and helper code for Modbus master firmware."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = []
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Manufacturing",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Software Development :: Code Generators"
]
dependencies = [
	"pandas>=2.1,<3.0",
	"openpyxl>=3.1,<4.0"
]
dynamic = ["version"]

[project.scripts]
mmg = "modbus_master_regmap_generator.main:main"

[project.urls]
Homepage = "https://github.com/prevalmam/modbus-master-regmap-generator"

[tool.setuptools]
packages = ["modbus_master_regmap_generator"]

[tool.setuptools.package-dir]
modbus_master_regmap_generator = "src/modbus_master_regmap_generator"

[tool.setuptools.dynamic]
version = { attr = "modbus_master_regmap_generator.__version__" }
